parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement other_statement
Rule 2     other_statement -> statement other_statement
Rule 3     other_statement -> empty
Rule 4     statement -> instruction
Rule 5     statement -> variable_declaration
Rule 6     statement -> procedure_declaration
Rule 7     statement -> procedure_call
Rule 8     statement -> if_then_else
Rule 9     statement -> while_loop
Rule 10    statement -> write
Rule 11    instruction -> FO number_expression
Rule 12    instruction -> FORWARD number_expression
Rule 13    instruction -> BK number_expression
Rule 14    instruction -> BACKWARD number_expression
Rule 15    instruction -> RT number_expression
Rule 16    instruction -> RIGHT expression
Rule 17    instruction -> LT number_expression
Rule 18    instruction -> LEFT number_expression
Rule 19    instruction -> PD
Rule 20    instruction -> PENDOWN
Rule 21    instruction -> PU
Rule 22    instruction -> PENUP
Rule 23    instruction -> WC
Rule 24    instruction -> WIPECLEAN
Rule 25    instruction -> CS
Rule 26    instruction -> CLEARSCREEN
Rule 27    instruction -> HOME
Rule 28    instruction -> HEADING
Rule 29    instruction -> TYPEIN
Rule 30    instruction -> SETXY number_expression COMMA number_expression
Rule 31    instruction -> XCOR number_expression
Rule 32    instruction -> YCOR number_expression
Rule 33    variable_declaration -> ID ASSIGN expression
Rule 34    variable -> COLON ID
Rule 35    argument_list -> argument_list COMMA argument
Rule 36    argument_list -> argument
Rule 37    argument -> expression
Rule 38    argument -> empty
Rule 39    procedure_declaration -> TO ID argument_list other_statement END
Rule 40    expression_list -> expression_list COMMA expression
Rule 41    expression_list -> expression
Rule 42    expression_list -> empty
Rule 43    procedure_call -> ID expression_list
Rule 44    expression -> OPEN_PAR expression CLOSE_PAR
Rule 45    expression -> boolean_expression
Rule 46    expression -> number_expression
Rule 47    expression -> RANDOM
Rule 48    expression -> string
Rule 49    number_expression -> number_expression ADD number_expression
Rule 50    number_expression -> number_expression SUB number_expression
Rule 51    number_expression -> number_expression MUL number_expression
Rule 52    number_expression -> number_expression DIV number_expression
Rule 53    number_expression -> number_expression POW number_expression
Rule 54    number_expression -> OPEN_PAR number_expression CLOSE_PAR
Rule 55    number_expression -> variable
Rule 56    number_expression -> NUM
Rule 57    boolean_expression -> relational_operation
Rule 58    boolean_expression -> boolean_expression OR boolean_expression
Rule 59    boolean_expression -> boolean_expression AND boolean_expression
Rule 60    boolean_expression -> NOT boolean_expression
Rule 61    boolean_expression -> variable
Rule 62    boolean_expression -> TRUE
Rule 63    boolean_expression -> FALSE
Rule 64    relational_operation -> expression GT_OP expression
Rule 65    relational_operation -> expression LT_OP expression
Rule 66    relational_operation -> expression GTE_OP expression
Rule 67    relational_operation -> expression LTE_OP expression
Rule 68    relational_operation -> expression EQ_OP expression
Rule 69    relational_operation -> expression NE_OP expression
Rule 70    if_then_else -> IF OPEN_PAR boolean_expression CLOSE_PAR THEN other_statement END
Rule 71    if_then_else -> IF OPEN_PAR boolean_expression CLOSE_PAR THEN other_statement ELSE other_statement END
Rule 72    while_loop -> WHILE OPEN_PAR boolean_expression CLOSE_PAR other_statement END
Rule 73    write -> WRITE expression
Rule 74    write -> WRITE string
Rule 75    empty -> <empty>
Rule 76    string -> STRING

Terminals, with rules where they appear

ADD                  : 49
AND                  : 59
ASSIGN               : 33
BACKWARD             : 14
BK                   : 13
CLEARSCREEN          : 26
CLOSE_PAR            : 44 54 70 71 72
COLON                : 34
COMMA                : 30 35 40
CS                   : 25
DIV                  : 52
ELSE                 : 71
END                  : 39 70 71 72
EQ_OP                : 68
FALSE                : 63
FO                   : 11
FORWARD              : 12
GTE_OP               : 66
GT_OP                : 64
HEADING              : 28
HOME                 : 27
ID                   : 33 34 39 43
IF                   : 70 71
LEFT                 : 18
LT                   : 17
LTE_OP               : 67
LT_OP                : 65
MUL                  : 51
NE_OP                : 69
NOT                  : 60
NUM                  : 56
OPEN_PAR             : 44 54 70 71 72
OR                   : 58
PD                   : 19
PENDOWN              : 20
PENUP                : 22
POW                  : 53
PU                   : 21
RANDOM               : 47
RIGHT                : 16
RT                   : 15
SETXY                : 30
STRING               : 76
SUB                  : 50
THEN                 : 70 71
TO                   : 39
TRUE                 : 62
TYPEIN               : 29
WC                   : 23
WHILE                : 72
WIPECLEAN            : 24
WRITE                : 73 74
XCOR                 : 31
YCOR                 : 32
error                : 

Nonterminals, with rules where they appear

argument             : 35 36
argument_list        : 35 39
boolean_expression   : 45 58 58 59 59 60 70 71 72
empty                : 3 38 42
expression           : 16 33 37 40 41 44 64 64 65 65 66 66 67 67 68 68 69 69 73
expression_list      : 40 43
if_then_else         : 8
instruction          : 4
number_expression    : 11 12 13 14 15 17 18 30 30 31 32 46 49 49 50 50 51 51 52 52 53 53 54
other_statement      : 1 2 39 70 71 71 72
procedure_call       : 7
procedure_declaration : 6
program              : 0
relational_operation : 57
statement            : 1 2
string               : 48 74
variable             : 55 61
variable_declaration : 5
while_loop           : 9
write                : 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement other_statement
    (4) statement -> . instruction
    (5) statement -> . variable_declaration
    (6) statement -> . procedure_declaration
    (7) statement -> . procedure_call
    (8) statement -> . if_then_else
    (9) statement -> . while_loop
    (10) statement -> . write
    (11) instruction -> . FO number_expression
    (12) instruction -> . FORWARD number_expression
    (13) instruction -> . BK number_expression
    (14) instruction -> . BACKWARD number_expression
    (15) instruction -> . RT number_expression
    (16) instruction -> . RIGHT expression
    (17) instruction -> . LT number_expression
    (18) instruction -> . LEFT number_expression
    (19) instruction -> . PD
    (20) instruction -> . PENDOWN
    (21) instruction -> . PU
    (22) instruction -> . PENUP
    (23) instruction -> . WC
    (24) instruction -> . WIPECLEAN
    (25) instruction -> . CS
    (26) instruction -> . CLEARSCREEN
    (27) instruction -> . HOME
    (28) instruction -> . HEADING
    (29) instruction -> . TYPEIN
    (30) instruction -> . SETXY number_expression COMMA number_expression
    (31) instruction -> . XCOR number_expression
    (32) instruction -> . YCOR number_expression
    (33) variable_declaration -> . ID ASSIGN expression
    (39) procedure_declaration -> . TO ID argument_list other_statement END
    (43) procedure_call -> . ID expression_list
    (70) if_then_else -> . IF OPEN_PAR boolean_expression CLOSE_PAR THEN other_statement END
    (71) if_then_else -> . IF OPEN_PAR boolean_expression CLOSE_PAR THEN other_statement ELSE other_statement END
    (72) while_loop -> . WHILE OPEN_PAR boolean_expression CLOSE_PAR other_statement END
    (73) write -> . WRITE expression
    (74) write -> . WRITE string

    FO              shift and go to state 10
    FORWARD         shift and go to state 11
    BK              shift and go to state 12
    BACKWARD        shift and go to state 13
    RT              shift and go to state 14
    RIGHT           shift and go to state 15
    LT              shift and go to state 16
    LEFT            shift and go to state 17
    PD              shift and go to state 18
    PENDOWN         shift and go to state 19
    PU              shift and go to state 20
    PENUP           shift and go to state 21
    WC              shift and go to state 22
    WIPECLEAN       shift and go to state 23
    CS              shift and go to state 24
    CLEARSCREEN     shift and go to state 25
    HOME            shift and go to state 26
    HEADING         shift and go to state 27
    TYPEIN          shift and go to state 28
    SETXY           shift and go to state 29
    XCOR            shift and go to state 30
    YCOR            shift and go to state 31
    ID              shift and go to state 32
    TO              shift and go to state 33
    IF              shift and go to state 34
    WHILE           shift and go to state 35
    WRITE           shift and go to state 36

    program                        shift and go to state 1
    statement                      shift and go to state 2
    instruction                    shift and go to state 3
    variable_declaration           shift and go to state 4
    procedure_declaration          shift and go to state 5
    procedure_call                 shift and go to state 6
    if_then_else                   shift and go to state 7
    while_loop                     shift and go to state 8
    write                          shift and go to state 9

state 1

    (0) S' -> program .



state 2

    (1) program -> statement . other_statement
    (2) other_statement -> . statement other_statement
    (3) other_statement -> . empty
    (4) statement -> . instruction
    (5) statement -> . variable_declaration
    (6) statement -> . procedure_declaration
    (7) statement -> . procedure_call
    (8) statement -> . if_then_else
    (9) statement -> . while_loop
    (10) statement -> . write
    (75) empty -> .
    (11) instruction -> . FO number_expression
    (12) instruction -> . FORWARD number_expression
    (13) instruction -> . BK number_expression
    (14) instruction -> . BACKWARD number_expression
    (15) instruction -> . RT number_expression
    (16) instruction -> . RIGHT expression
    (17) instruction -> . LT number_expression
    (18) instruction -> . LEFT number_expression
    (19) instruction -> . PD
    (20) instruction -> . PENDOWN
    (21) instruction -> . PU
    (22) instruction -> . PENUP
    (23) instruction -> . WC
    (24) instruction -> . WIPECLEAN
    (25) instruction -> . CS
    (26) instruction -> . CLEARSCREEN
    (27) instruction -> . HOME
    (28) instruction -> . HEADING
    (29) instruction -> . TYPEIN
    (30) instruction -> . SETXY number_expression COMMA number_expression
    (31) instruction -> . XCOR number_expression
    (32) instruction -> . YCOR number_expression
    (33) variable_declaration -> . ID ASSIGN expression
    (39) procedure_declaration -> . TO ID argument_list other_statement END
    (43) procedure_call -> . ID expression_list
    (70) if_then_else -> . IF OPEN_PAR boolean_expression CLOSE_PAR THEN other_statement END
    (71) if_then_else -> . IF OPEN_PAR boolean_expression CLOSE_PAR THEN other_statement ELSE other_statement END
    (72) while_loop -> . WHILE OPEN_PAR boolean_expression CLOSE_PAR other_statement END
    (73) write -> . WRITE expression
    (74) write -> . WRITE string

    $end            reduce using rule 75 (empty -> .)
    FO              shift and go to state 10
    FORWARD         shift and go to state 11
    BK              shift and go to state 12
    BACKWARD        shift and go to state 13
    RT              shift and go to state 14
    RIGHT           shift and go to state 15
    LT              shift and go to state 16
    LEFT            shift and go to state 17
    PD              shift and go to state 18
    PENDOWN         shift and go to state 19
    PU              shift and go to state 20
    PENUP           shift and go to state 21
    WC              shift and go to state 22
    WIPECLEAN       shift and go to state 23
    CS              shift and go to state 24
    CLEARSCREEN     shift and go to state 25
    HOME            shift and go to state 26
    HEADING         shift and go to state 27
    TYPEIN          shift and go to state 28
    SETXY           shift and go to state 29
    XCOR            shift and go to state 30
    YCOR            shift and go to state 31
    ID              shift and go to state 32
    TO              shift and go to state 33
    IF              shift and go to state 34
    WHILE           shift and go to state 35
    WRITE           shift and go to state 36

    statement                      shift and go to state 37
    other_statement                shift and go to state 38
    empty                          shift and go to state 39
    instruction                    shift and go to state 3
    variable_declaration           shift and go to state 4
    procedure_declaration          shift and go to state 5
    procedure_call                 shift and go to state 6
    if_then_else                   shift and go to state 7
    while_loop                     shift and go to state 8
    write                          shift and go to state 9

state 3

    (4) statement -> instruction .

    FO              reduce using rule 4 (statement -> instruction .)
    FORWARD         reduce using rule 4 (statement -> instruction .)
    BK              reduce using rule 4 (statement -> instruction .)
    BACKWARD        reduce using rule 4 (statement -> instruction .)
    RT              reduce using rule 4 (statement -> instruction .)
    RIGHT           reduce using rule 4 (statement -> instruction .)
    LT              reduce using rule 4 (statement -> instruction .)
    LEFT            reduce using rule 4 (statement -> instruction .)
    PD              reduce using rule 4 (statement -> instruction .)
    PENDOWN         reduce using rule 4 (statement -> instruction .)
    PU              reduce using rule 4 (statement -> instruction .)
    PENUP           reduce using rule 4 (statement -> instruction .)
    WC              reduce using rule 4 (statement -> instruction .)
    WIPECLEAN       reduce using rule 4 (statement -> instruction .)
    CS              reduce using rule 4 (statement -> instruction .)
    CLEARSCREEN     reduce using rule 4 (statement -> instruction .)
    HOME            reduce using rule 4 (statement -> instruction .)
    HEADING         reduce using rule 4 (statement -> instruction .)
    TYPEIN          reduce using rule 4 (statement -> instruction .)
    SETXY           reduce using rule 4 (statement -> instruction .)
    XCOR            reduce using rule 4 (statement -> instruction .)
    YCOR            reduce using rule 4 (statement -> instruction .)
    ID              reduce using rule 4 (statement -> instruction .)
    TO              reduce using rule 4 (statement -> instruction .)
    IF              reduce using rule 4 (statement -> instruction .)
    WHILE           reduce using rule 4 (statement -> instruction .)
    WRITE           reduce using rule 4 (statement -> instruction .)
    $end            reduce using rule 4 (statement -> instruction .)
    END             reduce using rule 4 (statement -> instruction .)
    ELSE            reduce using rule 4 (statement -> instruction .)


state 4

    (5) statement -> variable_declaration .

    FO              reduce using rule 5 (statement -> variable_declaration .)
    FORWARD         reduce using rule 5 (statement -> variable_declaration .)
    BK              reduce using rule 5 (statement -> variable_declaration .)
    BACKWARD        reduce using rule 5 (statement -> variable_declaration .)
    RT              reduce using rule 5 (statement -> variable_declaration .)
    RIGHT           reduce using rule 5 (statement -> variable_declaration .)
    LT              reduce using rule 5 (statement -> variable_declaration .)
    LEFT            reduce using rule 5 (statement -> variable_declaration .)
    PD              reduce using rule 5 (statement -> variable_declaration .)
    PENDOWN         reduce using rule 5 (statement -> variable_declaration .)
    PU              reduce using rule 5 (statement -> variable_declaration .)
    PENUP           reduce using rule 5 (statement -> variable_declaration .)
    WC              reduce using rule 5 (statement -> variable_declaration .)
    WIPECLEAN       reduce using rule 5 (statement -> variable_declaration .)
    CS              reduce using rule 5 (statement -> variable_declaration .)
    CLEARSCREEN     reduce using rule 5 (statement -> variable_declaration .)
    HOME            reduce using rule 5 (statement -> variable_declaration .)
    HEADING         reduce using rule 5 (statement -> variable_declaration .)
    TYPEIN          reduce using rule 5 (statement -> variable_declaration .)
    SETXY           reduce using rule 5 (statement -> variable_declaration .)
    XCOR            reduce using rule 5 (statement -> variable_declaration .)
    YCOR            reduce using rule 5 (statement -> variable_declaration .)
    ID              reduce using rule 5 (statement -> variable_declaration .)
    TO              reduce using rule 5 (statement -> variable_declaration .)
    IF              reduce using rule 5 (statement -> variable_declaration .)
    WHILE           reduce using rule 5 (statement -> variable_declaration .)
    WRITE           reduce using rule 5 (statement -> variable_declaration .)
    $end            reduce using rule 5 (statement -> variable_declaration .)
    END             reduce using rule 5 (statement -> variable_declaration .)
    ELSE            reduce using rule 5 (statement -> variable_declaration .)


state 5

    (6) statement -> procedure_declaration .

    FO              reduce using rule 6 (statement -> procedure_declaration .)
    FORWARD         reduce using rule 6 (statement -> procedure_declaration .)
    BK              reduce using rule 6 (statement -> procedure_declaration .)
    BACKWARD        reduce using rule 6 (statement -> procedure_declaration .)
    RT              reduce using rule 6 (statement -> procedure_declaration .)
    RIGHT           reduce using rule 6 (statement -> procedure_declaration .)
    LT              reduce using rule 6 (statement -> procedure_declaration .)
    LEFT            reduce using rule 6 (statement -> procedure_declaration .)
    PD              reduce using rule 6 (statement -> procedure_declaration .)
    PENDOWN         reduce using rule 6 (statement -> procedure_declaration .)
    PU              reduce using rule 6 (statement -> procedure_declaration .)
    PENUP           reduce using rule 6 (statement -> procedure_declaration .)
    WC              reduce using rule 6 (statement -> procedure_declaration .)
    WIPECLEAN       reduce using rule 6 (statement -> procedure_declaration .)
    CS              reduce using rule 6 (statement -> procedure_declaration .)
    CLEARSCREEN     reduce using rule 6 (statement -> procedure_declaration .)
    HOME            reduce using rule 6 (statement -> procedure_declaration .)
    HEADING         reduce using rule 6 (statement -> procedure_declaration .)
    TYPEIN          reduce using rule 6 (statement -> procedure_declaration .)
    SETXY           reduce using rule 6 (statement -> procedure_declaration .)
    XCOR            reduce using rule 6 (statement -> procedure_declaration .)
    YCOR            reduce using rule 6 (statement -> procedure_declaration .)
    ID              reduce using rule 6 (statement -> procedure_declaration .)
    TO              reduce using rule 6 (statement -> procedure_declaration .)
    IF              reduce using rule 6 (statement -> procedure_declaration .)
    WHILE           reduce using rule 6 (statement -> procedure_declaration .)
    WRITE           reduce using rule 6 (statement -> procedure_declaration .)
    $end            reduce using rule 6 (statement -> procedure_declaration .)
    END             reduce using rule 6 (statement -> procedure_declaration .)
    ELSE            reduce using rule 6 (statement -> procedure_declaration .)


state 6

    (7) statement -> procedure_call .

    FO              reduce using rule 7 (statement -> procedure_call .)
    FORWARD         reduce using rule 7 (statement -> procedure_call .)
    BK              reduce using rule 7 (statement -> procedure_call .)
    BACKWARD        reduce using rule 7 (statement -> procedure_call .)
    RT              reduce using rule 7 (statement -> procedure_call .)
    RIGHT           reduce using rule 7 (statement -> procedure_call .)
    LT              reduce using rule 7 (statement -> procedure_call .)
    LEFT            reduce using rule 7 (statement -> procedure_call .)
    PD              reduce using rule 7 (statement -> procedure_call .)
    PENDOWN         reduce using rule 7 (statement -> procedure_call .)
    PU              reduce using rule 7 (statement -> procedure_call .)
    PENUP           reduce using rule 7 (statement -> procedure_call .)
    WC              reduce using rule 7 (statement -> procedure_call .)
    WIPECLEAN       reduce using rule 7 (statement -> procedure_call .)
    CS              reduce using rule 7 (statement -> procedure_call .)
    CLEARSCREEN     reduce using rule 7 (statement -> procedure_call .)
    HOME            reduce using rule 7 (statement -> procedure_call .)
    HEADING         reduce using rule 7 (statement -> procedure_call .)
    TYPEIN          reduce using rule 7 (statement -> procedure_call .)
    SETXY           reduce using rule 7 (statement -> procedure_call .)
    XCOR            reduce using rule 7 (statement -> procedure_call .)
    YCOR            reduce using rule 7 (statement -> procedure_call .)
    ID              reduce using rule 7 (statement -> procedure_call .)
    TO              reduce using rule 7 (statement -> procedure_call .)
    IF              reduce using rule 7 (statement -> procedure_call .)
    WHILE           reduce using rule 7 (statement -> procedure_call .)
    WRITE           reduce using rule 7 (statement -> procedure_call .)
    $end            reduce using rule 7 (statement -> procedure_call .)
    END             reduce using rule 7 (statement -> procedure_call .)
    ELSE            reduce using rule 7 (statement -> procedure_call .)


state 7

    (8) statement -> if_then_else .

    FO              reduce using rule 8 (statement -> if_then_else .)
    FORWARD         reduce using rule 8 (statement -> if_then_else .)
    BK              reduce using rule 8 (statement -> if_then_else .)
    BACKWARD        reduce using rule 8 (statement -> if_then_else .)
    RT              reduce using rule 8 (statement -> if_then_else .)
    RIGHT           reduce using rule 8 (statement -> if_then_else .)
    LT              reduce using rule 8 (statement -> if_then_else .)
    LEFT            reduce using rule 8 (statement -> if_then_else .)
    PD              reduce using rule 8 (statement -> if_then_else .)
    PENDOWN         reduce using rule 8 (statement -> if_then_else .)
    PU              reduce using rule 8 (statement -> if_then_else .)
    PENUP           reduce using rule 8 (statement -> if_then_else .)
    WC              reduce using rule 8 (statement -> if_then_else .)
    WIPECLEAN       reduce using rule 8 (statement -> if_then_else .)
    CS              reduce using rule 8 (statement -> if_then_else .)
    CLEARSCREEN     reduce using rule 8 (statement -> if_then_else .)
    HOME            reduce using rule 8 (statement -> if_then_else .)
    HEADING         reduce using rule 8 (statement -> if_then_else .)
    TYPEIN          reduce using rule 8 (statement -> if_then_else .)
    SETXY           reduce using rule 8 (statement -> if_then_else .)
    XCOR            reduce using rule 8 (statement -> if_then_else .)
    YCOR            reduce using rule 8 (statement -> if_then_else .)
    ID              reduce using rule 8 (statement -> if_then_else .)
    TO              reduce using rule 8 (statement -> if_then_else .)
    IF              reduce using rule 8 (statement -> if_then_else .)
    WHILE           reduce using rule 8 (statement -> if_then_else .)
    WRITE           reduce using rule 8 (statement -> if_then_else .)
    $end            reduce using rule 8 (statement -> if_then_else .)
    END             reduce using rule 8 (statement -> if_then_else .)
    ELSE            reduce using rule 8 (statement -> if_then_else .)


state 8

    (9) statement -> while_loop .

    FO              reduce using rule 9 (statement -> while_loop .)
    FORWARD         reduce using rule 9 (statement -> while_loop .)
    BK              reduce using rule 9 (statement -> while_loop .)
    BACKWARD        reduce using rule 9 (statement -> while_loop .)
    RT              reduce using rule 9 (statement -> while_loop .)
    RIGHT           reduce using rule 9 (statement -> while_loop .)
    LT              reduce using rule 9 (statement -> while_loop .)
    LEFT            reduce using rule 9 (statement -> while_loop .)
    PD              reduce using rule 9 (statement -> while_loop .)
    PENDOWN         reduce using rule 9 (statement -> while_loop .)
    PU              reduce using rule 9 (statement -> while_loop .)
    PENUP           reduce using rule 9 (statement -> while_loop .)
    WC              reduce using rule 9 (statement -> while_loop .)
    WIPECLEAN       reduce using rule 9 (statement -> while_loop .)
    CS              reduce using rule 9 (statement -> while_loop .)
    CLEARSCREEN     reduce using rule 9 (statement -> while_loop .)
    HOME            reduce using rule 9 (statement -> while_loop .)
    HEADING         reduce using rule 9 (statement -> while_loop .)
    TYPEIN          reduce using rule 9 (statement -> while_loop .)
    SETXY           reduce using rule 9 (statement -> while_loop .)
    XCOR            reduce using rule 9 (statement -> while_loop .)
    YCOR            reduce using rule 9 (statement -> while_loop .)
    ID              reduce using rule 9 (statement -> while_loop .)
    TO              reduce using rule 9 (statement -> while_loop .)
    IF              reduce using rule 9 (statement -> while_loop .)
    WHILE           reduce using rule 9 (statement -> while_loop .)
    WRITE           reduce using rule 9 (statement -> while_loop .)
    $end            reduce using rule 9 (statement -> while_loop .)
    END             reduce using rule 9 (statement -> while_loop .)
    ELSE            reduce using rule 9 (statement -> while_loop .)


state 9

    (10) statement -> write .
